# opshub

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
agents/: _smoke.yaml  claude-code.yaml  codex.yaml
crates/opshub-cli/: Cargo.toml
crates/opshub-cli/src/: main.rs
crates/opshub-core/: Cargo.toml
crates/opshub-core/migrations/: 0001_init.sql
crates/opshub-core/src/: ansi.rs  event.rs  lib.rs  paths.rs  storage.rs
crates/opshub-runner/: Cargo.toml
crates/opshub-runner/src/: lib.rs  profile.rs  pty.rs
crates/opshub-tui/: Cargo.toml
crates/opshub-tui/src/: app.rs  buffer.rs  grid.rs  lib.rs  ui.rs
docs/: ARCHITECTURE.md
hooks/: emit-to-opshub.sh
