[workspace]
resolver = "2"
members = [
    "crates/opshub-core",
    "crates/opshub-runner",
    "crates/opshub-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["rrrrnmtsu"]
license = "Apache-2.0"
repository = "https://github.com/rrrrnmtsu/opshub"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
bytes = "1"
regex = "1"
directories = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
