[package]
name = "opshub-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rusqlite = { workspace = true }
ulid.workspace = true
regex.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3"
