[package]
name = "opshub-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opshub-core = { path = "../opshub-core" }
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
portable-pty.workspace = true
bytes.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "test-util"] }
