[package]
name = "opshub-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opshub-core = { path = "../opshub-core" }
opshub-runner = { path = "../opshub-runner" }
anyhow.workspace = true
tokio = { workspace = true }
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
